[package]
name = "sshfs"
version = "0.1.0"
publish = false
authors = [ "Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>" ]
edition = "2018"
description = "A SSHFS implementation written in Rust"

[dependencies]
anyhow = "1.0.47"
bitflags = "1.3.2"
bytes = "1.1.0"
dashmap = "4.0.2"
futures = "0.3.17"
libc = "0.2.108"
polyfuse = { git = "https://github.com/masnagam/polyfuse.git" }
slab = "0.4.5"
structopt = "0.3.25"
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = [ "full" ] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
url = "2.2.2"
whoami = "1.2.0"

[profile.release]
debug = true
