[package]
name = "workspacefs"
version = "0.1.0"
authors = [ "Contributes of concc-build" ]
edition = "2021"
description = "A network filesystem for distributed build systems"
publish = false

[dependencies]
anyhow = "1.0.47"
atty = "0.2.14"
bitflags = "1.3.2"
bytes = "1.1.0"
dashmap = "4.0.2"
futures = "0.3.17"
globset = "0.4.8"
humantime = "2.1.0"
jemallocator = "0.3.2"
libc = "0.2.108"
polyfuse = { git = "https://github.com/masnagam/polyfuse.git" }
procfs = "0.12.0"
serde = { version = "1.0.131", features = ["derive"] }
serde_with = "1.11.0"
serde_yaml = "0.8.23"
shell-words = "1.0.0"
static_assertions = "1.1.0"
structopt = "0.3.25"
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = [ "full" ] }
tracing = { version = "0.1.29", features = ["attributes"] }
tracing-subscriber = { version = "0.3.2", features = ["env-filter", "json"] }

[profile.release]
lto = true
